force-app/main/default/objects/VIEntiteBW__c/VIEntiteBW__c.object-meta.xml
<CustomObject>
    <label>EntiteBW</label>
    <nameField>
        <label>Nom de l&apos;EntiteBW</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EntiteBW</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>