force-app/main/default/objects/VIEntiteBW__c/fields/Adresse_1__c.field-meta.xml
<CustomField>
    <fullName>Adresse_1__c</fullName>
    <label>Adresse 1</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>