force-app/main/default/objects/VIEntiteBW__c/fields/Adresse_2__c.field-meta.xml
<CustomField>
    <fullName>Adresse_2__c</fullName>
    <label>Adresse 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>