force-app/main/default/objects/VIEntiteBW__c/fields/Compte_Bilan_Garantie_Local__c.field-meta.xml
<CustomField>
    <fullName>Compte_Bilan_Garantie_Local__c</fullName>
    <label>Compte Bilan Garantie Local</label>
    <length>12</length>
    <type>Text</type>
</CustomField>