force-app/main/default/objects/VIEntiteBW__c/fields/Compte_Charge_Reprise_Garantie_Groupe__c.field-meta.xml
<CustomField>
    <fullName>Compte_Charge_Reprise_Garantie_Groupe__c</fullName>
    <label>Compte Charge Reprise Garantie Groupe</label>
    <length>12</length>
    <type>Text</type>
</CustomField>