force-app/main/default/objects/VIEntiteBW__c/fields/Compte_Charge_Solde_Garantie_Local__c.field-meta.xml
<CustomField>
    <fullName>Compte_Charge_Solde_Garantie_Local__c</fullName>
    <label>Compte Charge Solde Garantie Local</label>
    <length>12</length>
    <type>Text</type>
</CustomField>