force-app/main/default/objects/VIEntiteBW__c/fields/Compte_Client_Avancement_Local__c.field-meta.xml
<CustomField>
    <fullName>Compte_Client_Avancement_Local__c</fullName>
    <label>Compte Client Avancement Local</label>
    <length>12</length>
    <type>Text</type>
</CustomField>