force-app/main/default/objects/VIEntiteBW__c/fields/Compte_Loc_EMM_Groupe__c.field-meta.xml
<CustomField>
    <fullName>Compte_Loc_EMM_Groupe__c</fullName>
    <label>Compte Loc EMM Groupe</label>
    <length>12</length>
    <type>Text</type>
</CustomField>