force-app/main/default/objects/VIEntiteBW__c/fields/Compte_Loc_EMM_Local__c.field-meta.xml
<CustomField>
    <fullName>Compte_Loc_EMM_Local__c</fullName>
    <label>Compte Loc EMM Local</label>
    <length>12</length>
    <type>Text</type>
</CustomField>