force-app/main/default/objects/VIEntiteBW__c/fields/ID_Affaire_location__c.field-meta.xml
<CustomField>
    <fullName>ID_Affaire_location__c</fullName>
    <label>ID Affaire location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>