force-app/main/default/objects/VIEntiteBW__c/fields/Libelle__c.field-meta.xml
<CustomField>
    <fullName>Libelle__c</fullName>
    <label>Libellé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>