force-app/main/default/objects/VIEntiteBW__c/fields/Nom_long__c.field-meta.xml
<CustomField>
    <fullName>Nom_long__c</fullName>
    <label>Nom long</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>