force-app/main/default/objects/VIEntiteBW__c/fields/Numero_de_TVA__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_TVA__c</fullName>
    <label>Numéro de TVA</label>
    <length>29</length>
    <type>Text</type>
</CustomField>