force-app/main/default/objects/VIEntiteBW__c/fields/Ouvert__c.field-meta.xml
<CustomField>
    <fullName>Ouvert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>permet de travailler dans ce EntiteBW</inlineHelpText>
    <label>Ouvert</label>
    <type>Checkbox</type>
</CustomField>