force-app/main/default/objects/VIEntiteBW__c/fields/Reference_legale__c.field-meta.xml
<CustomField>
    <fullName>Reference_legale__c</fullName>
    <label>Référence légale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>