force-app/main/default/objects/VIEntiteBW__c/fields/Site_Web__c.field-meta.xml
<CustomField>
    <fullName>Site_Web__c</fullName>
    <label>Site Web</label>
    <type>Url</type>
</CustomField>