force-app/main/default/objects/VIEntiteBW__c/fields/Terminaison_compte_Etranger__c.field-meta.xml
<CustomField>
    <fullName>Terminaison_compte_Etranger__c</fullName>
    <label>Terminaison compte Etranger</label>
    <length>3</length>
    <type>Text</type>
</CustomField>