force-app/main/default/objects/VIEntiteBW__c/fields/Type_de_depense_AMP__c.field-meta.xml
<CustomField>
    <fullName>Type_de_depense_AMP__c</fullName>
    <label>Type de dépense AMP</label>
    <length>3</length>
    <type>Text</type>
</CustomField>