force-app/main/default/objects/VIEntiteBW__c/fields/Type_de_depense_Avancement__c.field-meta.xml
<CustomField>
    <fullName>Type_de_depense_Avancement__c</fullName>
    <label>Type de dépense Avancement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>