force-app/main/default/objects/VIEntiteBW__c/fields/Type_de_depense_garantie__c.field-meta.xml
<CustomField>
    <fullName>Type_de_depense_garantie__c</fullName>
    <label>Type de dépense garantie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>