force-app/main/default/objects/VIEntiteBW__c/fields/Villle__c.field-meta.xml
<CustomField>
    <fullName>Villle__c</fullName>
    <label>Villle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>