force-app/main/default/objects/VIEntiteBW__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Libelle__c</columns>
    <columns>Ouvert__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>